# uni-projekt

./: .gitignore  CMakeLists.txt  Cam.cpp  Cam.h  Config.h  Controller.cpp  Controller.h  ImageProcessing.cpp  ImageProcessing.h  Main.cpp  OpenCVTests.py  Preview.cpp  Preview.h  README.md  VsCode_launch_Win.json  cam.cpp  cam.h  config.h  createLinks.sh  event_loop.cpp  event_loop.h  imageProcessing.cpp  imageProcessing.h  main.cpp  tmpImage
images/: image_100  image_101  image_102  image_103  image_104  image_105  image_106  image_107  image_108  image_109  image_110  image_111  image_112  image_113  image_114  image_115  image_116  image_117  image_118  image_119  image_120  image_121  image_122  image_123  image_124  image_125  image_126  image_127  image_128  image_129  image_130  image_131  image_132  image_133  image_134  image_135  image_136  image_137  image_138  image_139  (+178 more)
libcamera/include/: formats.h
libcamera/include/ipa/: core.mojom-module  core_ipa_interface.h  core_ipa_serializer.h  ipu3.mojom-module  ipu3_ipa_serializer.h  raspberrypi_ipa_serializer.h  rkisp1_ipa_interface.h  rkisp1_ipa_serializer.h  vimc_ipa_interface.h
libcamera/include/libcamera/: control_ids.h  version.h
libcamera/include/libcamera/ipa/: raspberrypi.mojom-module  raspberrypi_ipa_interface.h  raspberrypi_ipa_proxy.h  rkisp1.mojom-module  rkisp1_ipa_proxy.h  vimc.mojom-module  vimc_ipa_proxy.h
libcamera/src/libcamera/: libcamera.so.0
libcamera/src/libcamera/base/: libcamera-base.so.0  libcamera-base.so.0.0.0
src/: CMakeLists.txt  Cam.cpp  CameraCreator.cpp  CameraCreatorB.cpp  Controller.cpp  DevCam.cpp  ImageProcessing.cpp  Main.cpp  OhmCarSimulatorCam.cpp  OhmCarSimulatorConnector.cpp  PiCam.cpp  Preview.cpp  Utils.cpp
src/include/: Cam.h  CameraCreator.h  CameraCreatorB.h  Config.h  Controller.h  Debugging.h  DevCam.h  ICamera.h  ImageProcessing.h  OhmCarSimulatorCam.h  OhmCarSimulatorConnector.h  PiCam.h  Preview.h  SimpleWindow.h  Utils.h
